combat zone tests.